feat: dashboard FE GUI
